<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="com.meetster.chat.ChatActivity">

    <RelativeLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/profilePic"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/round_back_light_10"
            android:src="@drawable/user_icon" />
        <!--            android:layout_toEndOf=""/>-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/profilePic"
            android:orientation="vertical">

            <TextView
                android:id="@+id/chatUserNameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="User name"
                android:textColor="#424242"
                android:textSize="18dp"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chatRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/topBar"
        android:layout_above="@+id/bottomBar"
        />

    <RelativeLayout
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <EditText
            android:id="@+id/messageEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@+id/sendBtn"
            android:backgroundTint="@android:color/transparent"
            android:hint="Type something..."
            android:textSize="14dp" />

        <ImageView
            android:id="@+id/sendBtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:src="@drawable/send_icon" />

    </RelativeLayout>
</RelativeLayout>