<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.meetster.search.SearchActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <!--Bluetooth on/off image-->
        <ImageView
            android:layout_marginTop="10dp"
            android:id="@+id/imageBt"
            android:layout_width="100dp"
            android:layout_height="100dp" />
        <!--Bluetooth on button-->
        <Button
            android:id="@+id/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="200dp"
            android:text="Search" />
        <!--Bluetooth off button-->
        <Button
            android:id="@+id/stopSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="200dp"
            android:text="Stop searching" />

        <TextView
            android:id="@+id/foundUsersLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="10dp"
            android:text="Found users:"
            android:textSize="24sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/foundUsers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>